schema/testdata/validation_reserved_action_name_request_password_reset/schema.keel
model User {
    fields {
        email Text
    }

    operations {
        create requestPasswordReset() with (email)
    }
}

api Web {
    models {
        User
    }
}
