schema/testdata/errors/reserved_action_name_request_password_reset.keel
model User {
    fields {
        email Text
    }

    actions {
        //expect-error:16:36:NamingError:There already exists a reserved action with the name 'requestPasswordReset'
        create requestPasswordReset() with (email)
    }
}

api Web {
    models {
        User
    }
}
